// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatMessage /> renders message from active user 1`] = `
<div
  className="ChatMessage-messageWrapper-72 ChatMessage-messageWrappperFromMe-73"
>
  <div
    className="MuiPaper-root-78 MuiPaper-elevation2-82 MuiPaper-rounded-79 ChatMessage-message-74 ChatMessage-messageFromMe-75"
  >
    <span
      className="MuiTypography-root-105 MuiTypography-caption-115"
      style={
        Object {
          "color": "rgb(161,163,111)",
        }
      }
    >
      me
    </span>
    <p
      className="MuiTypography-root-105 MuiTypography-body1-114"
    >
      Hello, World!
    </p>
    <span
      className="MuiTypography-root-105 MuiTypography-caption-115"
    >
      2 days ago
    </span>
  </div>
  <div
    className="MuiAvatar-root-140 MuiAvatar-colorDefault-141"
    style={
      Object {
        "backgroundColor": "rgb(161,163,111)",
      }
    }
  >
    M
  </div>
</div>
`;

exports[`<ChatMessage /> renders message from other users 1`] = `
<div
  className="ChatMessage-messageWrapper-72"
>
  <div
    className="MuiAvatar-root-140 MuiAvatar-colorDefault-141"
    style={
      Object {
        "backgroundColor": "rgb(163,161,111)",
      }
    }
  >
    S
  </div>
  <div
    className="MuiPaper-root-78 MuiPaper-elevation2-82 MuiPaper-rounded-79 ChatMessage-message-74"
  >
    <span
      className="MuiTypography-root-105 MuiTypography-caption-115"
      style={
        Object {
          "color": "rgb(163,161,111)",
        }
      }
    >
      someone
    </span>
    <p
      className="MuiTypography-root-105 MuiTypography-body1-114"
    >
      Hello, World!
    </p>
    <span
      className="MuiTypography-root-105 MuiTypography-caption-115"
    >
      2 days ago
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders name in status message correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-72"
>
  <p
    className="MuiTypography-root-105 MuiTypography-body1-114 ChatMessage-statusMessage-76"
  >
    <span
      className="MuiTypography-root-105 MuiTypography-caption-115 ChatMessage-statusMessageUser-77"
      style={
        Object {
          "color": "rgb(163,161,111)",
        }
      }
    >
      Name Surname
    </span>
    Hello, World!
    <span
      className="MuiTypography-root-105 MuiTypography-caption-115"
    >
      2 days ago
    </span>
  </p>
</div>
`;

exports[`<ChatMessage /> renders name of active user correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-72 ChatMessage-messageWrappperFromMe-73"
>
  <div
    className="MuiPaper-root-78 MuiPaper-elevation2-82 MuiPaper-rounded-79 ChatMessage-message-74 ChatMessage-messageFromMe-75"
  >
    <span
      className="MuiTypography-root-105 MuiTypography-caption-115"
      style={
        Object {
          "color": "rgb(161,163,111)",
        }
      }
    >
      Name Surname
    </span>
    <p
      className="MuiTypography-root-105 MuiTypography-body1-114"
    >
      Hello, World!
    </p>
    <span
      className="MuiTypography-root-105 MuiTypography-caption-115"
    >
      2 days ago
    </span>
  </div>
  <div
    className="MuiAvatar-root-140 MuiAvatar-colorDefault-141"
    style={
      Object {
        "backgroundColor": "rgb(161,163,111)",
      }
    }
  >
    NS
  </div>
</div>
`;

exports[`<ChatMessage /> renders name of other users correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-72"
>
  <div
    className="MuiAvatar-root-140 MuiAvatar-colorDefault-141"
    style={
      Object {
        "backgroundColor": "rgb(163,161,111)",
      }
    }
  >
    NS
  </div>
  <div
    className="MuiPaper-root-78 MuiPaper-elevation2-82 MuiPaper-rounded-79 ChatMessage-message-74"
  >
    <span
      className="MuiTypography-root-105 MuiTypography-caption-115"
      style={
        Object {
          "color": "rgb(163,161,111)",
        }
      }
    >
      Name Surname
    </span>
    <p
      className="MuiTypography-root-105 MuiTypography-body1-114"
    >
      Hello, World!
    </p>
    <span
      className="MuiTypography-root-105 MuiTypography-caption-115"
    >
      2 days ago
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders status message 1`] = `
<div
  className="ChatMessage-messageWrapper-72"
>
  <p
    className="MuiTypography-root-105 MuiTypography-body1-114 ChatMessage-statusMessage-76"
  >
    <span
      className="MuiTypography-root-105 MuiTypography-caption-115 ChatMessage-statusMessageUser-77"
      style={
        Object {
          "color": "rgb(161,163,111)",
        }
      }
    >
      me
    </span>
    Hello, World!
    <span
      className="MuiTypography-root-105 MuiTypography-caption-115"
    >
      2 days ago
    </span>
  </p>
</div>
`;
